@@ -5,4 +5,5 @@
     <property name="account_locked_date" type="date">2000/01/01</property>
     <property name="account_locked" type="boolean">False</property>
     <property name="password_tries" type="int">0</property>
+    <property name="password_history" type="lines">0</property>
 </object>
