@@ -2,6 +2,7 @@
 
 from DateTime import DateTime
 from Globals import InitializeClass
+from AccessControl import AuthEncoding
 from AccessControl import ClassSecurityInfo
 from AccessControl import Unauthorized
 
@@ -111,12 +112,34 @@ class PwExpiryPlugin(BasePlugin):
     security.declarePrivate('doChangeUser')
     def doChangeUser(self, principal_id, password):
         """
-        Update user's password date
+        Update user's password date and store passwords history.
         """
         user = api.user.get(username=principal_id)
         portal = api.portal.get()
         current_time = portal.ZopeTime()
         user.setMemberProperties({'password_date': current_time})
         self._invalidatePrincipalCache(principal_id)
+
+        # Remember passwords here
+        max_history_pws = api.portal.get_registry_record(
+            'collective.pwexpiry.password_history'
+        )
+
+        if max_history_pws == 0:
+            # disabled, return here.
+            return
+
+        enc_pw = password
+        if not AuthEncoding.is_encrypted(enc_pw):
+            enc_pw = AuthEncoding.pw_encrypt(enc_pw)
+
+        pw_history = list(user.getProperty('password_history', tuple()))
+        pw_history.append(enc_pw)
+        if len(pw_history) > max_history_pws:
+            # Truncate the history
+            pw_history = pw_history[-max_history_pws:]
+
+        user.setMemberProperties({'password_history': tuple(pw_history)})
+
 
 InitializeClass(PwExpiryPlugin)
