@@ -1,0 +1,8 @@
+<registry>
+    <record name="collective.pwexpiry.password_history">
+        <field type="plone.registry.field.Int">
+            <title>Number of passwords to save and block.</title>
+        </field>
+        <value>0</value>
+    </record>
+</registry>
